--- a/branches/1.0/pom.xml
+++ b/branches/1.0/pom.xml
@@ -20,6 +20,13 @@
             <name>JBoss Repository (Newer Hibernate)</name>
             <url>http://repository.jboss.org/maven2</url>
         </repository>
+        <repository>
+            <id>osgeo</id>
+            <name>Open Source Geospatial Foundation Repository</name>
+            <url>http://download.osgeo.org/webdav/geotools/</url>
+        </repository>
+
+
     </repositories>
     <dependencies>
         <!-- Junit -->
@@ -257,9 +264,15 @@
             <artifactId>jstl</artifactId>
             <version>1.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.geotools</groupId>
+            <artifactId>gt-main</artifactId>
+            <version>${geotools.version}</version>
+        </dependency>
     </dependencies>
     <properties>
         <xerces-version>2.9.1</xerces-version>
+        <geotools.version>2.6.5</geotools.version>
     </properties>
     <build>
         <finalName>jwaf</finalName>
