forgot to change the finalName in the <build> section. Isn't cutting and pasting fun?

--- a/branches/1.0/pom.xml
+++ b/branches/1.0/pom.xml
@@ -280,7 +280,7 @@
         <geotools.version>2.6.5</geotools.version>
     </properties>
     <build>
-        <finalName>jwaf</finalName>
+        <finalName>mapmaker2</finalName>
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
