--- a/pom.xml
+++ b/pom.xml
@@ -52,12 +52,12 @@
         <dependency>
             <groupId>org.apache.struts</groupId>
             <artifactId>struts2-core</artifactId>
-            <version>2.1.8.1</version>
+            <version>${struts.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.struts</groupId>
             <artifactId>struts2-spring-plugin</artifactId>
-            <version>2.1.8.1</version>
+            <version>${struts.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.springframework</groupId>
@@ -88,12 +88,12 @@
         <dependency>
             <groupId>org.apache.struts</groupId>
             <artifactId>struts2-convention-plugin</artifactId>
-            <version>2.1.8.1</version>
+            <version>${struts.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.struts</groupId>
             <artifactId>struts2-json-plugin</artifactId>
-            <version>2.2.1</version>
+            <version>${struts.version}</version>
         </dependency>
         <dependency>
             <groupId>com.jgeppert.struts2.jquery</groupId>
@@ -279,6 +279,11 @@
             <artifactId>jstl</artifactId>
             <version>1.2</version>
         </dependency>
+                <dependency>
+            <groupId>javassist</groupId>
+            <artifactId>javassist</artifactId>
+            <version>3.8.0.GA</version>
+        </dependency>
         <dependency>
             <groupId>org.geotools</groupId>
             <artifactId>gt-main</artifactId>
@@ -293,6 +298,7 @@
     <properties>
         <xerces-version>2.9.1</xerces-version>
         <geotools.version>2.6.5</geotools.version>
+        <struts.version>2.2.1</struts.version>
     </properties>
     <build>
         <finalName>mapmaker2</finalName>
