--- a/pom.xml
+++ b/pom.xml
@@ -279,7 +279,7 @@
             <artifactId>jstl</artifactId>
             <version>1.2</version>
         </dependency>
-                <dependency>
+        <dependency>
             <groupId>javassist</groupId>
             <artifactId>javassist</artifactId>
             <version>3.8.0.GA</version>
@@ -302,6 +302,11 @@
     </properties>
     <build>
         <finalName>mapmaker2</finalName>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -316,16 +321,18 @@
                 <artifactId>jetty-maven-plugin</artifactId>
                 <version>7.1.6.v20100715</version>
                 <configuration>
+                    <scanIntervalSeconds>0</scanIntervalSeconds>
+                    <!--<classesDirectory>target/classes</classesDirectory>-->
                     <!--<contextPath>/</contextPath>-->
                     <connectors>
                         <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
                             <port>8888</port>
                             <maxIdleTime>60000</maxIdleTime>
                         </connector>
-<!--                        <connector implementation="org.eclipse.jetty.server.ssl.SslSelectChannelConnector">
-                            <port>8443</port>
-                            <maxIdleTime>0</maxIdleTime>
-                            --><!-- MODIFY THIS TO WHEREVER YOU PUT THE KEYSTORE. SHOULD BE OUTSIDE OF YOUR WORK DIR --><!--
+                        <!--                        <connector implementation="org.eclipse.jetty.server.ssl.SslSelectChannelConnector">
+                        <port>8443</port>
+                        <maxIdleTime>0</maxIdleTime>
+                        --><!-- MODIFY THIS TO WHEREVER YOU PUT THE KEYSTORE. SHOULD BE OUTSIDE OF YOUR WORK DIR --><!--
                             <keystore>C:/Programming/Projects/jetty-ssl.keystore2</keystore>
                             <password>jetty6</password>
                             <keyPassword>jetty6</keyPassword>
@@ -344,6 +351,21 @@
                 <configuration>
                     <skipTests>true</skipTests>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.zeroturnaround</groupId>
+                <artifactId>javarebel-maven-plugin</artifactId>
+
+                <executions>
+                    <execution>
+                        <id>generate-rebel-xml</id>
+                        <phase>process-resources</phase>
+                        <goals>
+
+                            <goal>generate</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
