--- a/branches/1.0/pom.xml
+++ b/branches/1.0/pom.xml
@@ -235,6 +235,11 @@
             <version>2.4</version>
         </dependency>
         <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.13</version>
+        </dependency>
+        <dependency>
             <groupId>org.hsqldb</groupId>
             <artifactId>hsqldb-j5</artifactId>
             <version>2.0.0</version>
