--- a/branches/1.0/pom.xml
+++ b/branches/1.0/pom.xml
@@ -220,6 +220,11 @@
 
         <!-- Jakarta Commons -->
         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-compress</artifactId>
+            <version>1.1</version>
+        </dependency>
+        <dependency>
             <groupId>commons-fileupload</groupId>
             <artifactId>commons-fileupload</artifactId>
             <version>1.1.1</version>
